--- a/4- Code/style.css
+++ b/4- Code/style.css
@@ -3,11 +3,12 @@
 	margin: 0;
 	padding: 0;
 	font-family: montserrat;
-	background-image: url('D:/ITI/Web/Project/Home imgs/pic.JPG');
+	background-image: url("zz.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
 	overflow:hidden;
+	background-color:red;
 }
  /* border body position and formate*/
 .center{
@@ -15,9 +16,10 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 400px;
+	width: 380px;
 	background:white;
-	border-radius: 10px;
+	border-radius: 20px;
+	opacity: 0.8;
 }
  /* login formate*/
  
@@ -121,7 +123,7 @@ input[type="submit"]:hover{
 
 /* have account redirect to login*/
 .login_link{
-	margin:30px 0;
+	margin:10px 0;
 	text-align: center;
 	font-size: 16px;
 	color: #666666;
