--- a/4- Code/AddCar.css
+++ b/4- Code/AddCar.css
@@ -1,42 +1,52 @@
-body{
-	display: flex;
-	justify-content: left;
-	align-items: left;
-	/*gap:10px;*/
-	flex-direction: column;
-	height: 100vh;
-}
-.photofile{
-	margin-top: 230px;
-	
+
+	body {
+  background-color: #f5f5f5;
 }
 
-#display_image{
-	width: 375px;
-	height: 211px;
-	border: 1px solid black;
-	background-position: left;
-	background-size: cover;
-}
-.price{
-	height: 19px;
-}
-.menu{
-	float: left;
-	 width: 23.33%;
- /*padding-left: -1200px;*/
-  margin-left: 10px;
+.container {
+  margin-top: 50px;
 }
 
-.AddBtn{
-	margin-left: 630px;
-	width: 100px;
-	height: 30px;
-	background-color: transparent;
+.card-header {
+  background-color: #3d3d3d;
+  color: white;
 }
 
-/*.cardetails{
-	float: left;
-  width: 23.33%;
-  margin-left: 20px;
-  }*/
+.card-body {
+  background-color: #fff;
+}
+
+.menu {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.photofile {
+  background-color: #3d3d3d;
+  color: white;
+  margin-top: 20px;
+}
+
+.photofile:hover {
+  background-color: #424242;
+}
+
+.AddBtn {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease-in-out;
+}
+
+.AddBtn:hover {
+  background-color: #3e8e41; /* Dark green */
+}
